bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:4: error: not found: value <=
    case(true,hour<=7)=>return(true)
                  ^ParotTrouble:5: error: not found: value >=
    case(true,hour>=20)=>return(true)
                  ^