bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  var a=hour
  (talking,hour)match{
    case(true,hour<=7)=>return(true)
    case(true,hour>=20)=>return(true)
  }
  }